<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_category"
        android:icon="@drawable/category"
        android:title="@string/collection"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_favorites"
        android:icon="@drawable/favourite"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>